Fix theme: change English to Viet Nam